--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -75,11 +75,11 @@ admin_34 : "Failed to seek the current stream."
 
 # Start
 start_1 : "Thanks for having me in {0}.\n{1} is alive.\n\nFor any assistance or help, checkout our support group and channel."
-start_2 : "Hello, My name is {0}.\n\nI'm a telegram streaming bot with some useful features. Supporting platforms like Youtube, Spotify, Resso, AppleMusic , Soundcloud etc.\n\nFeel free to add me to your groups."
-start_3 : "Welcome To {0}\n\nI don't need any **admin permission** to work ( until asked for ).\n\nAssistant Username:- @{1}\nAssistant ID:- {2}"
-start_4 : "{0}'s Owner[{1}] has just joined your chat."
+start_2 : "Hello, My Name Is {0}.\n\nI'm A Telegram Streaming Bot With Some Useful Geatures. Supporting Platforms like Youtube, Spotify, Resso, AppleMusic , Soundcloud Etc.\n\nFeel Free To Add Me To Your Groups."
+start_3 : "Welcome To {0}\n\nI Don't Need Any **Admin Permission** To Work ( Until Asked For ).\n\nAssistant Username:- @{1}\nAssistant ID:- {2}"
+start_4 : "{0}'s Owner[{1}] Has just Joined Your Chat."
 start_5 : "A member of {0}'s Sudo User[{1}] has just joined your chat."
-start_6 : "❗️ **Supergroup Needed** ❗️\n\nPlease convert your **group** to **supergroup** and then add me back.\n\n**How to make supergroup?**\n✅ Make your group's chat history **visible** once."
+start_6 : "❗️ **Supergroup Needed** ❗️\n\nPlease cLConvert Your **Group** To **Supergroup** And tLThen Add Me Back.\n\n**How To Make Supergroup?**\n✅ Make Your Group's Chat History **Visible** Once."
 start_7 : "**Blacklisted Chat**\n\nYou're chat has been blacklisted by the Bot. Please ask any SudoUser to whitelist chat first. Check [Sudolist from here]({0})"
 
 # Help
